INTU-JS - Adding overflow for conversation panel, and fixing height of audio panel.

--- a/etc/shared/www/css/style.css
+++ b/etc/shared/www/css/style.css
@@ -210,6 +210,9 @@ a {
 	right: 0;
 	height: 100%;
 }
+.conversation-panel {
+	overflow: auto;
+}
 .drag-panel.over {
 	border: 2px dashed #000;
 }
